--- a/dbt/transaction/dbt_project.yml
+++ b/dbt/transaction/dbt_project.yml
@@ -4,11 +4,6 @@ config-version: 2
 
 profile: "fulll-dbt-profile"
 
-clean-targets: # folders to be removed by `dbt clean`
-  - "target"
-  - "dbt_packages"
-  - "logs"
-
 model-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
@@ -17,11 +12,31 @@ macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 docs-paths: ["docs"]
 
+clean-targets: # folders to be removed by `dbt clean`
+  - "target"
+  - "dbt_packages"
+  - "logs"
+
+require-dbt-version: [">=1.9.0", "<2.0.0"]
+
+flags:
+  partial_parse: true
+  use_colors: true
+  printer_width: 80
+  send_anonymous_usage_stats: false
+  require_explicit_package_overrides_for_builtin_materializations: false
+
+query-comment:
+  comment: "{{ common.query_comment(node) }}"
+  job-label: True
+
 vars:
   source_db_main: "prj-data-fulll-lz-dev-1c8b"
 
 models:
   transaction:
+    +docs:
+      node_color: "#fc8403"
     +persist_docs:
       relation: true
       columns: true
