--- a/profiles.yml
+++ b/profiles.yml
@@ -6,7 +6,7 @@ fulll-dbt-profile:
       method: oauth
       project: prj-data-fulll-data-dev-bf85
       execution_project: prj-astrafy-main-courses
-      schema: bqdts_{{ env_var('USER', 'default') | replace('-', '_') }}
+      schema: bqdts_sbx
       threads: 12
       timeout_seconds: 300
       location: EU
