--- a/.github/ci-dev.yml
+++ b/.github/ci-dev.yml
@@ -1,10 +1,17 @@
 name: ci-dev
 
+
+# on:
+#   push:
+#     tags:
+#       - 'prd-[0-9]+.[0-9]+.[0-9]+'
+#       - 'rc-[0-9]+.[0-9]+.[0-9]+'
+
+
 on:
-  push:
-    tags:
-      - 'prd-[0-9]+.[0-9]+.[0-9]+'
-      - 'rc-[0-9]+.[0-9]+.[0-9]+'
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-push:
