--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -1,17 +1,10 @@
 name: ci-dev
 
-
-# on:
-#   push:
-#     tags:
-#       - 'prd-[0-9]+.[0-9]+.[0-9]+'
-#       - 'rc-[0-9]+.[0-9]+.[0-9]+'
-
-
 on:
-  pull_request:
-    branches:
-      - main
+  push:
+    tags:
+      - 'prd-[0-9]+.[0-9]+.[0-9]+'
+      - 'rc-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build-and-push:
