--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -6,11 +6,11 @@ on:
       - 'rc-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
+
   build-and-push:
     runs-on: ubuntu-latest
     concurrency:
       group: build_and_push
-      cancel-in-progress: true
     permissions:
       contents: read
       id-token: write
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: |
             europe-west1-docker.pkg.dev/prj-astrafy-artifacts/dbt-training/fulll/${{ env.PACKAGE }}:${{ github.ref_name }}
           cache-from: type=gha
