--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -6,7 +6,7 @@ on:
       - 'rc-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  dbt-ci:
+  dbt-compile:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -34,7 +34,7 @@ jobs:
           pip install -r docker_requirement.txt
 
       - name: Run dbt deps
-        run: cd dbt/jaffle_shop && dbt compile --target dev
+        run: dbt compile --target dev --project-dir dbt/jaffle_shop
 
 
   build-and-push:
@@ -44,6 +44,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+    needs: dbt-compile
 
     env:
       PACKAGE: jaffle_shop
@@ -72,7 +73,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            europe-west1-docker.pkg.dev/prj-astrafy-artifacts/dbt-training/fulll/${{ env.PACKAGE }}:${{ github.ref_name }}
+            europe-west1-docker.pkg.dev/prj-astrafy-main-courses/dbt-training/fulll/${{ env.PACKAGE }}:${{ github.ref_name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
