--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -6,11 +6,42 @@ on:
       - 'prd-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
+  dbt-compile:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
 
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Google Auth
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: projects/308265262426/locations/global/workloadIdentityPools/github-pool/providers/main-provider
+          service_account: sa-ci-dbt-fulll-prd@prj-astrafy-main-courses.iam.gserviceaccount.com
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r docker_requirement.txt
+
+      - name: Run dbt deps
+        run: dbt deps --project-dir dbt/jaffle_shop
+
+      - name: Run dbt deps
+        run: dbt compile --target prd --project-dir dbt/jaffle_shop
+
+        
   build-and-push:
     runs-on: ubuntu-latest
-    concurrency:
-      group: build_and_push
     permissions:
       contents: read
       id-token: write
