--- a/dbt/all/packages.yml
+++ b/dbt/all/packages.yml
@@ -1,4 +1,4 @@
 packages:
+  - local: ../jaffle_shop
   - local: ../product
-  - local: ../customer 
-  - local: ../transaction 
+  - local: ../transaction
