--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SA_CLOUD_BUILD="sa-cloud-build-fulll@prj-astrafy-main-courses.iam.gserviceaccount.com"
-COMPANY_NAME="fulll"
+SA_CLOUD_BUILD="sa-cloud-build-sds@prj-astrafy-main-courses.iam.gserviceaccount.com"
+COMPANY_NAME="sds"
