--- a/dbt/jaffle_shop/dbt_project.yml
+++ b/dbt/jaffle_shop/dbt_project.yml
@@ -1,7 +1,7 @@
 name: 'jaffle_shop'
 version: '1.0.1'
 
-profile: 'fulll-dbt-profile'
+profile: 'sds-dbt-profile'
 
 model-paths: ["models"]
 analysis-paths: ["analysis"]
@@ -30,7 +30,7 @@ query-comment:
   job-label: True
 
 vars:
-  source_db_main: "prj-data-fulll-lz-dev-1c8b"
+  source_db_main: "prj-data-sds-lz-dev-4542"
   "dbt_date:time_zone": "Europe/Paris"
 
 models:
