--- a/dbt/transaction/dbt_project.yml
+++ b/dbt/transaction/dbt_project.yml
@@ -2,7 +2,7 @@ name: "transaction"
 version: "1.0.1"
 config-version: 2
 
-profile: "fulll-dbt-profile"
+profile: "sds-dbt-profile"
 
 model-paths: ["models"]
 analysis-paths: ["analysis"]
@@ -31,7 +31,7 @@ query-comment:
   job-label: True
 
 vars:
-  source_db_main: "prj-data-fulll-lz-dev-1c8b"
+  source_db_main: "prj-data-sds-lz-dev-4542"
 
 models:
   transaction:
